; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/sunxi/extr_sun4i-i2s.c_sun4i_i2s_stop_capture.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/sunxi/extr_sun4i-i2s.c_sun4i_i2s_stop_capture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sun4i_i2s = type { i32 }

@SUN4I_I2S_CTRL_REG = common dso_local global i32 0, align 4
@SUN4I_I2S_CTRL_RX_EN = common dso_local global i32 0, align 4
@SUN4I_I2S_DMA_INT_CTRL_REG = common dso_local global i32 0, align 4
@SUN4I_I2S_DMA_INT_CTRL_RX_DRQ_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sun4i_i2s*)* @sun4i_i2s_stop_capture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sun4i_i2s_stop_capture(%struct.sun4i_i2s* %0) #0 {
  %2 = alloca %struct.sun4i_i2s*, align 8
  store %struct.sun4i_i2s* %0, %struct.sun4i_i2s** %2, align 8
  %3 = load %struct.sun4i_i2s*, %struct.sun4i_i2s** %2, align 8
  %4 = getelementptr inbounds %struct.sun4i_i2s, %struct.sun4i_i2s* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @SUN4I_I2S_CTRL_REG, align 4
  %7 = load i32, i32* @SUN4I_I2S_CTRL_RX_EN, align 4
  %8 = call i32 @regmap_update_bits(i32 %5, i32 %6, i32 %7, i32 0)
  %9 = load %struct.sun4i_i2s*, %struct.sun4i_i2s** %2, align 8
  %10 = getelementptr inbounds %struct.sun4i_i2s, %struct.sun4i_i2s* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @SUN4I_I2S_DMA_INT_CTRL_REG, align 4
  %13 = load i32, i32* @SUN4I_I2S_DMA_INT_CTRL_RX_DRQ_EN, align 4
  %14 = call i32 @regmap_update_bits(i32 %11, i32 %12, i32 %13, i32 0)
  ret void
}

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
